--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -16,6 +16,6 @@ node {
         docker.image('cdrx/pyinstaller-linux:python2').inside {
             sh 'pyinstaller --onefile sources/add2vals.py'
         }
-        archiveArtifacts 'dist/add2vals'
+        archiveArtifacts artifacts: 'dist/add2vals', allowEmptyArchive: true
     }
 }
