--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -11,4 +11,12 @@ node {
         }
         junit 'test-reports/results.xml'
     }
+
+    stage('Deploy') {
+        docker.image('cdrx/pyinstaller-linux:python2').inside {
+            sh 'pyinstaller --onefile sources/add2vals.py'
+            input message: 'Sudah selesai menggunakan Python App? (Klik "Proceed" untuk mengakhiri)'
+            archiveArtifacts 'dist/add2vals'
+        }
+    }
 }
