--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,22 +1,40 @@
 node {
+    def IMAGE_PYTHON = 'python:3.11.4-alpine3.18'
+    def IMAGE_PYTEST = 'qnib/pytest'
+    def IMAGE_PYINSTALLER = 'cdrx/pyinstaller-linux:python2'
+
     stage('Build') {
-        docker.image('python:2-alpine').inside {
+        docker.image(IMAGE_PYTHON).inside {
             sh 'python -m py_compile sources/add2vals.py sources/calc.py'
+            stash name: 'compiled-results', includes: 'sources/*.py*'
         }
     }
 
     stage('Test') {
-        docker.image('qnib/pytest').inside {
-            sh 'py.test --verbose --junit-xml test-reports/results.xml sources/test_calc.py'
+        docker.image(IMAGE_PYTEST).inside {
+            sh 'py.test --junit-xml test-reports/results.xml sources/test_calc.py'
         }
         junit 'test-reports/results.xml'
     }
 
-    stage('Deploy') {
-        docker.image('cdrx/pyinstaller-linux:python2').inside {
-            sh 'pyinstaller --onefile sources/add2vals.py'
-            input message: 'Sudah selesai menggunakan Python App? (Klik "Proceed" untuk mengakhiri)'
-            archiveArtifacts 'dist/add2vals'
+    stage('Deliver') {
+        def VOLUME = "${pwd()}/sources:/src"
+        def BUILD_ID = env.BUILD_ID
+        def IMAGE = IMAGE_PYINSTALLER
+
+        node {
+            stage('Deliver') {
+                sh "mkdir -p ${BUILD_ID}"
+                stash name: 'compiled-results'
+                docker.image(IMAGE).inside {
+                    sh "docker run --rm -v ${VOLUME} ${IMAGE} 'pyinstaller -F add2vals.py'"
+                }
+            }
+
+            stage('Post-Deliver') {
+                sh "docker run --rm -v ${VOLUME} ${IMAGE} 'rm -rf build dist'"
+                archiveArtifacts "${BUILD_ID}/sources/dist/add2vals"
+            }
         }
     }
 }
