--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,36 +1,43 @@
 node {
-    def IMAGE_PYTHON = 'python:3.11.4-alpine3.18'
-    def IMAGE_PYTEST = 'qnib/pytest'
-    def IMAGE_PYINSTALLER = 'cdrx/pyinstaller-linux:python2'
-
     stage('Build') {
-        docker.image(IMAGE_PYTHON).inside {
+        agent {
+            docker {
+                image 'python:2-alpine'
+            }
+        }
+        steps {
             sh 'python -m py_compile sources/add2vals.py sources/calc.py'
         }
     }
 
     stage('Test') {
-        docker.image(IMAGE_PYTEST).inside {
-            sh 'py.test --junit-xml test-reports/results.xml sources/test_calc.py'
+        agent {
+            docker {
+                image 'qnib/pytest'
+            }
         }
-        junit 'test-reports/results.xml'
+        steps {
+            sh 'py.test --verbose --junit-xml test-reports/results.xml sources/test_calc.py'
+        }
+        post {
+            always {
+                junit 'test-reports/results.xml'
+            }
+        }
     }
 
-    stage('Deploy') {
-        def VOLUME = "${pwd()}/sources:/src"
-        def BUILD_ID = env.BUILD_ID
-        def IMAGE = IMAGE_PYINSTALLER
-
-        node {
-            stage('Deploy') {
-                docker.image(IMAGE).inside {
-                    sh "docker run --rm -v ${VOLUME} ${IMAGE} 'pyinstaller -F add2vals.py'"
-                }
+    stage('Deliver') {
+        agent {
+            docker {
+                image 'cdrx/pyinstaller-linux:python2'
             }
-
-            stage('Post-Deploy') {
-                sh "docker run --rm -v ${VOLUME} ${IMAGE} 'rm -rf build dist'"
-                archiveArtifacts "${BUILD_ID}/sources/dist/add2vals"
+        }
+        steps {
+            sh 'pyinstaller --onefile sources/add2vals.py'
+        }
+        post {
+            success {
+                archiveArtifacts 'dist/add2vals'
             }
         }
     }
