--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,22 +1,35 @@
 // Scripted Pipeline
 node {
-    stage('Build') {
-        docker.image('python:2-alpine').inside {
-            sh 'python -m py_compile sources/add2vals.py sources/calc.py'
-        }
-    }
+    def VOLUME = "${pwd()}/sources:/src"
+    def IMAGE = 'cdrx/pyinstaller-linux:python2'
 
-    stage('Test') {
-        docker.image('qnib/pytest').inside {
-            sh 'py.test --verbose --junit-xml test-reports/results.xml sources/test_calc.py'
+    try {
+        stage('Build') {
+            docker.image('python:3.11.4-alpine3.18').inside {
+                sh 'python -m py_compile sources/add2vals.py sources/calc.py'
+                stash name: 'compiled-results', includes: 'sources/*.py*'
+            }
         }
-        junit 'test-reports/results.xml'
-    }
 
-    stage('Deploy') {
-        docker.image('cdrx/pyinstaller-linux:python2').inside {
-            sh 'pyinstaller --onefile sources/add2vals.py'
+        stage('Test') {
+            docker.image('qnib/pytest').inside {
+                sh 'py.test --junit-xml test-reports/results.xml sources/test_calc.py'
+            }
+            junit 'test-reports/results.xml'
         }
-        archiveArtifacts 'dist/add2vals'
+
+        stage('Deploy') {
+            dir("${BUILD_ID}") {
+                unstash name: 'compiled-results'
+                sh "docker run --rm -v ${VOLUME} ${IMAGE} 'pyinstaller -F add2vals.py'"
+                archiveArtifacts artifacts: "${BUILD_ID}/sources/dist/add2vals", allowEmptyArchive: true
+                sh "docker run --rm -v ${VOLUME} ${IMAGE} 'rm -rf build dist'"
+            }
+        }
+    } catch (Exception e) {
+        currentBuild.result = 'UNSTABLE'
+        throw e
+    } finally {
+        junit '**/test-reports/*.xml'
     }
 }
